color issues: fix stream-info and formatting-tips alignment

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -2097,7 +2097,7 @@ label.required:after {
 		}
 		.formatting-tips {
 			float: right;
-			height: 23px;
+			height: 25px;
 			font-size: 11px;
 			padding: 3px;
 			display: -webkit-flex;
@@ -2138,7 +2138,9 @@ label.required:after {
 		}
 		.stream-info {
 			font-size: 12px;
+			height: 25px;
 			padding: 3px;
+			float: left;
 		}
 		.editing-commands {
 			display: none;
